<resources>
    <string name="app_name">SS Delivery Booking App</string>
    <string name="if_you_don_t_have_account_already">If you don\'t have account already</string>
    <string name="signup">SignUp</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="this_is_an_image">this is an image</string>
    <string name="create">Choose:</string>
    <string name="go_to_camera">Go To Camera</string>
    <string name="go_to_gallery">Go To Gallery</string>
    <string name="something_went_wrong">Something goes wrong, Please try again</string>
    <string name="no_record">No record found. Please try again later.</string>
    <string name="oil_work_message">Please choose from Monday to Saturday. Seemab Sikander Delivery Garage is closed on Sunday.</string>
    <string name="engine_work_message">Please choose only Friday and Saturday. Seemab Sikander Delivery Garage is worked only these two days for Engine Work.</string>
    <string name="bike_plate_no">Bike Plate No</string>
    <string name="booking_id">Booking ID:</string>
    <string name="booking_details">Booking Details</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="please_choose_only_one_slot_per_day">Please choose only one Slot per day.</string>
    <string name="book">Book</string>
    <string name="please_sign_in_to_continue">Please Sign in to continue</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="booking_app">Booking App</string>
    <string name="oil_change">Oil Change</string>
    <string name="other_services">Other Services</string>
    <string name="engine_work">Engine Work</string>
    <string name="outdoor_services">Outdoor Services</string>
    <string name="full_name">Full Name</string>
    <string name="father_name">Father Name</string>
    <string name="rider_id">Rider Id</string>
    <string name="license_no">License No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="alert">Alert!!</string>
    <string name="ok">OK</string>
    <string name="thank">Thank you!!</string>
    <string name="hello">Hello,</string>
    <string name="at">at</string>
    <string name="forr">for</string>
    <string name="is_confirmed_on">is confirmed on</string>
    <string name="your_booking_for">your booking for</string>
    <string name="logout_confirmation">Are  you  sure  you  want  to  Logout?</string>
    <string name="splash_name">SS Delivery Garage \n Booking App</string>
    <string name="intro_to_app">Intro to App</string>
    <string name="support">Support</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="alraedy_registered">This bike is already registered with other Rider name.</string>
    <string name="please_enter_name">PLease enter Name</string>
    <string name="please_enter_plate">PLease enter Bike plate number</string>
    <string name="please_enter_license">Please enter Driving License number</string>
    <string name="please_enter_phone">Please enter Mobile number </string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="bike_register">Please enter Registered Bike Number</string>
    <string name="license_matched">This Driving license is already registered</string>
    <string name="registerd">You are Successfully Registered.</string>
    <string name="logout">Logout</string>
    <string name="terms_conditions">These terms and conditions will be binding between the SSD Garage and the Rider upon the booking of any work. \n
1.   If you place an order for work via the Application you warrant that you are legally capable of entering into a Garage, you are at least having a valid UAE Driving License. \n
2.   SSD Garage Timings are from 09:00am to 09:00pm. \n
3.   Rider must reach before 10 minutes prior to given time. \n
4.   If the Rider Bike get fine outside the Garage, then the Garage will not responsible for that Fine. \n
5.   Garage will only responsible for mechanical work, any damage or breakage will payable by Rider side. \n
6.   Bike running kilo meters should not exceed more than 1000 Km after every Oil change.</string>
    <string name="settings">Settings</string>
    <string name="please_accept">Please accept above terms and conditions</string>
    <string name="introduction_to_app">Introduction to App</string>
    <string name="accept">Accept</string>
    <string name="i_agree_to_above_terms_and_conditions">I agree to above terms and conditions</string>
    <string name="app_new_version">App new version is available, please update it from playstore so you can allow to be use the App features.</string>
    <string name="update">Update</string>
    <string name="my_bookings">My Bookings</string>
    <string name="no_bookings">No bookings :(</string>
</resources>