<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="30dp"
    android:layout_gravity="center"
    android:layout_marginHorizontal="50dp"
    android:background="@drawable/edit_text_bg"
    android:layout_height="wrap_content">

    <ImageView
        android:visibility="gone"
        android:id="@+id/ivCancelPopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_cancel_24"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/this_is_an_image"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_bold"
        android:text="@string/alert"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="0dp"
        android:gravity="center"
        android:text="@string/app_new_version"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:fontFamily="@font/font_regular"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdate"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="#4CAF50"
        android:fontFamily="@font/font_regular"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>