<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presenter.login.LoginActivity">

        <TextView
            android:id="@+id/txtLanguageName"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_bold"/>

        <ImageView
            app:layout_constraintBottom_toTopOf="@id/midLogin"
            android:contentDescription="@string/this_is_an_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/midLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/font_bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_marginTop="-25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_sign_in_to_continue"
                android:fontFamily="@font/font_regular"
              />

            <EditText
                android:inputType="number"
                android:id="@+id/etLicenseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/font_medium"
                android:hint="@string/driving_license_number"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/font_medium"
                android:hint="@string/password"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/font_medium"
                android:text="@string/login"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/midLogin">

            <TextView
                android:id="@+id/txtNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text="@string/if_you_don_t_have_account_already" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/signup"
                android:textColor="@color/primaryColor" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>